--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ JWT_SECRET=THIS_IS_A_SECRET
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://buachompoo:Hl21r7zk65SAurpk@cluster0.yjakv.mongodb.net/"
+DATABASE_URL="mongodb+srv://buachompoo:Hl21r7zk65SAurpk@cluster0.yjakv.mongodb.net/261207-lab21"
